--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Bahá’í Writings</title>
   <style>
+    <script>
+async function showDailyQuote() {
+  // fetch the list of quotes
+  const res = await fetch('quotes.json');
+  const quotes = await res.json();
+
+  // pick quote by day-of-year to avoid repeats
+  const dayOfYear = Math.floor(
+    (Date.now() - new Date(new Date().getFullYear(), 0, 0)) / 86400000
+  );
+  const quote = quotes[dayOfYear % quotes.length];
+
+  document.getElementById('quote').textContent = quote;
+}
+showDailyQuote();
+</script>
     body {
       margin: 0;
       padding: 0;
