--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Daily Bahá’í Writings</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-  <div class="quote-container">
-    <div id="quote" class="quote">Loading...</div>
-    <div id="date"  class="date"></div>
-  </div>
-
-  <script src="js/main.js"></script>
-</body>
-</html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Daily Baha'i Writing</title>
+     <link rel="stylesheet" href="style.css"> {/* Add this line */}
+ </head>
+ <body>
+     <header>
+         <h1>Daily Baha'i Writing</h1>
+     </header>
+     <main>
+         <div id="quote-container">
+             <p>Loading Baha'i Writing...</p>
+         </div>
+     </main>
+     <script src="script.js"></script>
+ </body>
+ </html>
