--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
  <body>
      <header>
          <h1>Daily Baha'i Writing</h1>
+             <p id="date">Loading date...</p> {/* ADD THIS LINE */}
      </header>
      <main>
          <div id="quote-container">
              <p>Loading Baha'i Writing...</p>
          </div>
      </main>
-     <script src="script.js"></script>
+     <script src="js/script.js" defer></script>
  </body>
  </html>
