--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Daily Baha'i Writing</title>
-     <link rel="stylesheet" href="css/style.css"> {/* Add this line */}
+     <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
      <header>
          <h1>Daily Baha'i Writing</h1>
-             <p id="date">Loading date...</p> {/* ADD THIS LINE */}
+             <p id="date">Loading date...</p>
      </header>
      <main>
          <div id="quote-container">
