--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <main>
          <div id="quote-container">
              <p>Loading Baha'i Writing...</p>
+             <p id="badiDate" class="date"></p>
          </div>
      </main>
      <script src="js/script.js" defer></script>
