--- a/index.html
+++ b/index.html
@@ -8,51 +8,47 @@
 </head>
 <body>
     <main>
-        <!-- Badíʿ Date will be displayed here -->
         <p id="badiDate" class="date">Loading Badíʿ Date...</p>
-
-        <!-- Daily Baha'i Writing will be displayed here -->
         <div id="quote-display-area">
             <p>Loading Baha'i Writing...</p>
         </div>
     </main>
 
-    <!-- External Badíʿ date script - ADD DEFER -->
-    <script src="https://wondrous-badi.today/scripts/BadiDateToday.v1.js" defer></script>
-
-    <!-- Inline script to initialize BadiDateToday - also with DEFER or ensure it runs after -->
-    <script defer>
-      // Because both this script and the one above have 'defer',
-      // they will execute in the order they appear in the document,
-      // after the HTML is parsed.
-      // So, BadiDateToday.v1.js should have executed and defined BadiDateToday.
-
-      // It's still good practice to check if it's defined.
-      if (typeof BadiDateToday !== 'undefined' && BadiDateToday.init) {
-          try {
-              BadiDateToday.init({
-                  elementId: "badiDate",
-                  format: "long",
-                  language: "en"
-              });
-          } catch (error) {
-              console.error("Error initializing BadiDateToday:", error);
-              const badiDateElement = document.getElementById("badiDate");
-              if (badiDateElement) {
-                  badiDateElement.textContent = "Failed to load Badíʿ Date.";
-              }
-          }
-      } else {
-          // This block might still be hit if the external script fails to load for network reasons
-          console.error("BadiDateToday object is not defined. The external script might have failed to load or execute.");
-          const badiDateElement = document.getElementById("badiDate");
-          if (badiDateElement) {
-              badiDateElement.textContent = "Error loading Badíʿ Date script component.";
-          }
+    <script>
+      // Function to initialize BadiDateToday
+      function initializeBadiDate() {
+        console.log("Attempting to initialize BadiDateToday...");
+        if (typeof BadiDateToday !== 'undefined' && BadiDateToday.init) {
+            try {
+                console.log("BadiDateToday object found. Initializing...");
+                BadiDateToday.init({
+                    elementId: "badiDate",
+                    format: "long",
+                    language: "en"
+                });
+                console.log("BadiDateToday initialized.");
+            } catch (error) {
+                console.error("Error initializing BadiDateToday:", error);
+                const badiDateElement = document.getElementById("badiDate");
+                if (badiDateElement) {
+                    badiDateElement.textContent = "Failed to load Badíʿ Date.";
+                }
+            }
+        } else {
+            console.error("BadiDateToday object is not defined even after script load attempt. The external script might have failed to load, execute properly, or define the global object as expected.");
+            const badiDateElement = document.getElementById("badiDate");
+            if (badiDateElement) {
+                badiDateElement.textContent = "Error loading Badíʿ Date script component.";
+            }
+        }
       }
     </script>
 
-    <!-- Your custom script for fetching and displaying quotes - also with DEFER -->
+    <!-- External Badíʿ date script -->
+    <!-- We will try to call initializeBadiDate() after this script loads -->
+    <script src="https://wondrous-badi.today/scripts/BadiDateToday.v1.js" onload="initializeBadiDate()" onerror="console.error('Failed to load BadiDateToday.v1.js script itself.'); initializeBadiDate(); /* Still try to init in case it loaded but onload didn't fire perfectly but object is there */"></script>
+
+    <!-- Your custom script for fetching and displaying quotes - keep defer -->
     <script src="js/script.js" defer></script>
 </body>
 </html>
