--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Sacred Verse</title>
-    <link rel="icon" href="favicon.png" type="image/png"> <!-- ADD FAVICON LINK -->
+    <link rel="icon" href="favicon.png" type="image/png">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="light-mode"> <!-- Default to light mode, JS will check localStorage -->
-    <div class="container-main-wrapper">
-        <div class="container-main">
+<body class="light-mode"> 
+    <div class="container-main-wrapper"> 
+        <div class="container-main"> 
             
             <main class="quote-jumbotron">
                 <div class="quote-content">
-                    <h1 id="quote-text">Loading Sacred Verse...</h1>
-                    <div class="attribution-line"> <!-- Wrapper for author and copy button -->
+                    <!-- Make the h1 itself clickable for copy -->
+                    <h1 id="quote-text" title="Click to copy quote" style="cursor: pointer;">Loading Sacred Verse...</h1>
+                    <div class="attribution-line"> 
                         <h2 id="quote-author"></h2>
-                        <button id="copy-quote-button" title="Copy Quote" aria-label="Copy quote to clipboard">📋</button> <!-- Copy button -->
+                        <!-- Copy button removed from here -->
                     </div>
                 </div>
                 <a href="#scroll-content-start" class="scroll-down-arrow" aria-label="Scroll down">
@@ -27,7 +28,7 @@
         </div> 
 
         <div id="scroll-content-start" class="scrollable-content">
-            <div class="panel-citation">
+            <div class="panel-citation"> 
                 <div class="citation-container">
                     <p id="quote-source-full"></p> 
                 </div>
@@ -35,24 +36,25 @@
 
             <div class="panel-whitespace"></div> 
 
-            <div class="panel-controls"> <!-- Renamed for clarity -->
+            <div class="panel-controls"> 
                 <div class="buttons-container">
                     <a href="#" id="yesterday-button" class="button">Yesterday</a>
                     <a href="#" id="today-button" class="button button-active">Today</a> 
                 </div>
-                <div class="theme-toggle-container">
-                    <button id="theme-toggle-button" aria-label="Toggle light/dark theme">
-                        <span class="icon-sun">☀️</span>
-                        <span class="icon-moon">🌙</span>
-                    </button>
-                </div>
+                <!-- Theme toggle removed from here -->
             </div>
 
             <div class="panel-info">
                 <div class="info-container">
-                    <!-- Badíʿ Date will be updated by JS for Today/Yesterday -->
                     <h1 id="badiDate" class="badi-date-title">Loading Badíʿ Date...</h1>
-                    <p id="gregorianDatePanel" class="date-text"></p> <!-- Gregorian date in panel -->
+                    <!-- Theme toggle moved here -->
+                    <div class="theme-toggle-container-inline"> 
+                        <button id="theme-toggle-button" aria-label="Toggle light/dark theme">
+                            <span class="icon-sun">☀️</span>
+                            <span class="icon-moon">🌙</span>
+                        </button>
+                    </div>
+                    <p id="gregorianDatePanel" class="date-text"></p> 
                     <p class="info-description">A daily verse for reflection.</p> 
                 </div>
             </div>
