--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Sacred Verse</title>
     <link rel="icon" href="favicon.png" type="image/png"> 
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'> <!-- Added font weights -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="light-mode"> 
     <div class="container-main-wrapper"> 
-        <main class="quote-jumbotron" id="today-jumbotron"> 
+        <main class="quote-jumbotron" id="main-jumbotron"> 
             <div class="quote-content-wrapper"> 
-                <h1 id="quote-text-today" title="Click to copy quote">Loading Sacred Verse...</h1>
+                <h1 id="quote-text" title="Click to copy quote">Loading Sacred Verse...</h1>
                 <div class="attribution-line"> 
-                    <h2 id="quote-author-today"></h2> 
+                    <h2 id="quote-author"></h2> 
                 </div>
             </div>
-            <a href="#scroll-content-start" id="scroll-down-arrow-today" class="scroll-down-arrow" aria-label="Scroll down"> 
+            <a href="#scroll-content-start" id="scroll-down-arrow" class="scroll-down-arrow" aria-label="Scroll down"> 
                 <img src="img/downArrow-01.png" alt="Scroll down" /> 
             </a>
         </main>
@@ -25,18 +25,15 @@
         <div id="scroll-content-start" class="scrollable-content">
             <div class="panel-citation"> 
                 <div class="panel-content-constrained"> 
-                    <p id="quote-source-full-today"></p> 
+                    <p id="quote-source-full"></p> 
                 </div>
             </div>
 
-            <div class="panel-whitespace panel-whitespace-large"></div>
-
-            <!-- BUTTON PANEL - REINSTATED AND SIMPLIFIED -->
-            <div class="panel-buttons"> 
-                <div class="panel-content-constrained buttons-layout-centered"> <!-- Centering container -->
+            <div class="panel-buttons">
+                <div class="panel-content-constrained buttons-layout-centered">
                     <div class="buttons-container">
-                        <a href="#today-jumbotron" id="today-button" class="button button-active">Today</a> 
-                        <a href="#yesterday-jumbotron" id="yesterday-button" class="button">Yesterday</a>
+                        <a href="#" id="yesterday-button" class="button">Yesterday</a> 
+                        <a href="#" id="today-button" class="button button-active">Today</a> 
                     </div>
                 </div>
             </div>
@@ -50,28 +47,6 @@
                             <span class="icon-sun">☀️</span>
                             <span class="icon-moon">🌙</span>
                         </button>
-                    </div>
-                </div>
-            </div>
-            
-            <!-- Container for Yesterday's Quote -->
-            <div id="yesterday-jumbotron" class="quote-jumbotron past-quote-jumbotron" style="display: none;">
-                 <div class="panel-content-constrained"> 
-                    <h2 class="past-quote-day-label">Yesterday</h2> <!-- Changed from "Yesterday's Verse" -->
-                    <div class="quote-content-wrapper">
-                        <h1 id="quote-text-yesterday" title="Click to copy quote"></h1>
-                        <div class="attribution-line">
-                            <h2 id="quote-author-yesterday"></h2>
-                        </div>
-                    </div>
-                    <div class="panel-citation past-citation"> 
-                         <div class="panel-content-constrained">
-                            <p id="quote-source-full-yesterday"></p>
-                         </div>
-                    </div>
-                    <div class="past-date-info">
-                        <p id="badiDateYesterday" class="date-text past-badi-date"></p>
-                        <p id="gregorianDateYesterday" class="date-text"></p>
                     </div>
                 </div>
             </div>
