Refactor: Implement UI refinements and simplified Yesterday logic
Applied several UI and functional refinements:
- HTML: Simplified structure, one main quote display, adjusted panel order.
- CSS: Applied requested font size changes (quote, author, citation),
  unitalicized citation, increased panel whitespace and button panel size,
  made theme toggle more subtle.
- JS (script.js):
    - Yesterday/Today buttons now update the single main jumbotron quote.
    - Badíʿ and Gregorian dates in the info panel update for the selected day.
    - Scroll-down arrow functionality verified.
    - Click-to-copy implemented on quote text with alert feedback.
    - Badíʿ date click toggles Gregorian date visibility.
- JS (badi-init.js): No significant change other than ensuring it provides
  the utility for script.js to call.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Sacred Verse</title>
-    <link rel="icon" href="favicon.png" type="image/png"> 
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'> <!-- Added font weights -->
+    <link rel="icon" href="img/favicon.png" type="image/png"> <!-- Corrected favicon path -->
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="light-mode"> 
@@ -29,7 +29,9 @@
                 </div>
             </div>
 
-            <div class="panel-buttons">
+            <!-- No explicit whitespace div, handled by panel margins/paddings -->
+
+            <div class="panel-buttons"> 
                 <div class="panel-content-constrained buttons-layout-centered">
                     <div class="buttons-container">
                         <a href="#" id="yesterday-button" class="button">Yesterday</a> 
