--- a/index.html
+++ b/index.html
@@ -9,54 +9,54 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="light-mode"> 
-    <!-- NO .container-main-wrapper or .container-main at this top level -->
-
-    <main class="quote-jumbotron" id="main-jumbotron"> 
-        <div class="quote-content-wrapper"> <!-- This constrains the jumbotron's text -->
-            <h1 id="quote-text" title="Click to copy quote">Loading Sacred Verse...</h1>
-            <div class="attribution-line"> 
-                <h2 id="quote-author"></h2> 
-            </div>
-        </div>
-        <a href="#scroll-content-start" id="scroll-down-arrow" class="scroll-down-arrow" aria-label="Scroll down"> 
-            <img src="img/downArrow-01.png" alt="Scroll down" /> 
-        </a>
-    </main>
-
-    <div id="scroll-content-start" class="scrollable-content"> <!-- This div will be 100% width by default -->
-        <div class="panel-citation"> 
-            <div class="panel-content-constrained"> <!-- This centers and max-widths the P tag -->
-                <p id="quote-source-full"></p> 
-            </div>
-        </div>
-
-        <div class="panel-buttons"> 
-            <div class="panel-content-constrained buttons-layout-centered">
-                <div class="buttons-container">
-                    <a href="#" id="yesterday-button" class="button">Yesterday</a> 
-                    <a href="#" id="today-button" class="button button-active">Today</a> 
+    <div class="container-main-wrapper"> 
+        <main class="quote-jumbotron" id="main-jumbotron"> 
+            <div class="quote-content-wrapper"> 
+                <h1 id="quote-text" title="Click to copy quote">Loading Sacred Verse...</h1> <!-- Simplified ID -->
+                <div class="attribution-line"> 
+                    <h2 id="quote-author"></h2> <!-- Simplified ID -->
                 </div>
             </div>
-        </div>
+            <a href="#scroll-content-start" id="scroll-down-arrow" class="scroll-down-arrow" aria-label="Scroll down"> <!-- Simplified ID -->
+                <img src="img/downArrow-01.png" alt="Scroll down" /> 
+            </a>
+        </main>
 
-        <div class="panel-info"> 
-            <div class="panel-content-constrained"> 
-                <h1 id="badiDate" class="badi-date-title clickable-date" title="Show/Hide Gregorian Date">Loading Badíʿ Date...</h1>
-                <p id="gregorianDatePanel" class="date-text" style="display: none;"></p> 
-                <div class="theme-toggle-container-subtle">  
-                    <button id="theme-toggle-button" aria-label="Toggle light/dark theme">
-                        <span class="icon-sun">☀️</span>
-                        <span class="icon-moon">🌙</span>
-                    </button>
+        <div id="scroll-content-start" class="scrollable-content">
+            <div class="panel-citation"> 
+                <div class="panel-content-constrained"> 
+                    <p id="quote-source-full"></p> <!-- Simplified ID -->
                 </div>
             </div>
-        </div>
-        
-        <footer>
-            <div class="panel-content-constrained">
-                <p>Inspired by the Ocean of God's words.</p>
+
+            <div class="panel-buttons"> 
+                <div class="panel-content-constrained buttons-layout-centered">
+                    <div class="buttons-container">
+                        <a href="#" id="yesterday-button" class="button">Yesterday</a> 
+                        <a href="#" id="today-button" class="button button-active">Today</a> 
+                    </div>
+                </div>
             </div>
-        </footer>
+
+            <div class="panel-info"> 
+                <div class="panel-content-constrained"> 
+                    <h1 id="badiDate" class="badi-date-title clickable-date" title="Show/Hide Gregorian Date">Loading Badíʿ Date...</h1>
+                    <p id="gregorianDatePanel" class="date-text" style="display: none;"></p> 
+                    <div class="theme-toggle-container-subtle">  
+                        <button id="theme-toggle-button" aria-label="Toggle light/dark theme">
+                            <span class="icon-sun">☀️</span>
+                            <span class="icon-moon">🌙</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            
+            <footer>
+                <div class="panel-content-constrained">
+                    <p>Inspired by the Ocean of God's words.</p>
+                </div>
+            </footer>
+        </div> 
     </div> 
 
     <script src="https://wondrous-badi.today/scripts/BadiDateToday.v1.js" defer></script>
